--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 /* src/index.css */
 
+.btn-primary {
+  background-color: #0F2C54;
+  border-color: #0F2C54;
+}
+
 /* Fondo y base */
 body {
   margin: 0;
